--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -8,7 +8,6 @@ layout: post
 categories: chapter
 title: 4. Emerging Learning Designs
 ---
-
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
 -   [Exploring issues and context from practitioner interviews and
@@ -38,8 +37,8 @@ title: 4. Emerging Learning Designs
     facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
     -   [Design tensions experienced as a researcher /
         designer](#design-tensions-experienced-as-a-researcher-designer)
-        -   [Tensions surrounding authenticity of coding environment /
-            template](#tensions-surrounding-authenticity-of-coding-environment-template)
+        -   [Tensions surrounding authenticity of tool
+            use](#tensions-surrounding-authenticity-of-tool-use)
 -   [Participant conflicts /
     contractions](#participant-conflicts-contractions)
     -   [1. Identity hardcore coding & disfunctional group work -
@@ -52,21 +51,10 @@ title: 4. Emerging Learning Designs
             sources](#tensions-and-related-to-navigation-of-various-documentations-sources)
     -   [3. Facilitator conflict addressing the Play
         Paradox](#facilitator-conflict-addressing-the-play-paradox)
+        -   [Using Physical Maps of Missions as Game Design Patterns -
+            COMPRESS](#using-physical-maps-of-missions-as-game-design-patterns---compress)
         -   [Learning Dimensions Map](#learning-dimensions-map)
-    -   [Using Physical Maps of Missions as Game Design Patterns -
-        DROP?](#using-physical-maps-of-missions-as-game-design-patterns---drop)
--   [Further discussion of learning design - HOLDING SECTION
-    CURRENTLY](#further-discussion-of-learning-design---holding-section-currently)
-    -   [Discussion on Authenticity from methods chapter moved
-        here](#discussion-on-authenticity-from-methods-chapter-moved-here)
-        -   [Near-authentic processes and tools in drama and
-            project-based processes and related scenarios to increase
-            agency](#near-authentic-processes-and-tools-in-drama-and-project-based-processes-and-related-scenarios-to-increase-agency)
-        -   [Authenticity of Audience and
-            Problems](#authenticity-of-audience-and-problems)
-        -   [Authenticity of supporting documentation and design
-            concepts](#authenticity-of-supporting-documentation-and-design-concepts)
--   [Further Discussion](#further-discussion)
+-   [Discussion](#discussion)
     -   [Starting discussion on the mutual nature of the design
         process.](#starting-discussion-on-the-mutual-nature-of-the-design-process.)
     -   [Work of Gee and others on identity of makers /
@@ -545,16 +533,35 @@ In the following sections of this chapter I focus on such which relate directly 
 
 This section is writen from my own perspectives to inform discussion on design tensions. The process here is driven not only from user feedback but also on a more intuitive experience as an experienced facilitator in this field. I also draw on the tensions explored in the previous exploration of fellow participants. I  focus on tensions involving authenticity as a precursor to exploring their relationshiop with participation experience of agency.
 
-#### Tensions surrounding authenticity of coding environment / template
+Rainer, Bolton and other practitioner-researchers agree on the potential and value of exploring other subject matter - e.g.  literacy, maths, science and history -  and undertaking authentic project work within a drama frame [-@rainer_drama_2012].
 
-Javascript as coding language, Phaser as a game making framework and Glitch as a code environment, are highly authentic and used by both professional coders and enthusiasts alike.
+This authenticity has several relevant dimensions in this study including: audience; toolset; and supportive processes / documentation. This section explores the these dimensions of authenticity and the resulting relationships with agency of the learners.
+
+#### Tensions surrounding authenticity of tool use
+
+PBL is adapted to schools in many settings thus, authenticity is "on a scale" in PBL  The concept of an authentic-as-possible project is a key tool for educators to support game making via project based learning [find support]. One advatange of working with digital tools is that if issues of complexity and cost can be addressed access to laptops and the internet allow learners to use very similar production tools to professionals.
+
+
+**Key message: authentic tools and processes can increase agency but facilitators should use them with careful curation - as there are negative effects too**
+
+
+Javascript as coding language, Phaser as a game making framework and Glitch as a code environment, are highly authentic and used by both professional coders and enthusiasts alike. A Mozilla white paper [@mozilla_foundation_webmaker_2014] outlines the power of exploring web technology as an empowering activity. My own work in this area has been informed by work developing teaching materials for the Mozilla Foundation as part of the Teach the Web programme.
+
+ <!-- This programme introduced a broad set of competencies name Web Literacies including; digital literacy
+- web literacy - narrower
+- webmaker - and more specific affordances of key web based coding and exploring tools -->
+
 
 Javascript is an authentic language, core to modern web pages and applications. Phaser is a professional and enthusiast framework. Glitch is a code playground which while used for learning and which was chosen by Mozilla as a replacement tool for the education focused Thimble, is also used by professionals. In the early selection of tools the use of a framework based on javascript and web technology is driven by authenticity and thus an ability . My work on teach the web for Mozilla was motivated in part in the extensibility of this choice of language which can be compared to block based environments or game specific making tools like game-star mechanics.
 
-  FIND SUPPORT FROM MOZILLA WHITE PAPER - JUSTIFY EFFORT OF JS AS A STARTING LANGUAGE
-
 Phaser is a javascript framework embedded in html page. Unlike many game making tools this tools set can be extended to other kinds of projects and is a professional and foundational toolset used to build the majority of websites and many phone applications.
 
+
+
+<!-- - audience
+- tools
+- processes (professional and peers ?)
+- shared concepts - link to GDPs as a big one -->
 
   <!-- An unusual approach so why?
 
@@ -567,15 +574,26 @@ Phaser is a javascript framework embedded in html page. Unlike many game making 
   -
 #### Tensions associated with authenticity of audience
 
+
 **Learners may not find coding a project a motivating project if it is only a private activity with no authentic audience**.
+
+Making for peers has value but can be amplified and scoped using a fictional or controlled external audience often via scenarios.
+
+<!--
+MOVE To LATER DISCUSSION ON AUTHENTICITY IN LATER CHAPTERS?
+
+In line existing PBL research [LIT NEEDED]  with previous iterations of this learning design the process of creating a game for a real audience of university students was motivating [DATA NEEDED].
+
+While the use of a fictional audience in the drama is clearly inauthentic, authenticity is "on a scale" [find support].
+
+In relation to existing literature this is well explored but the use of drama processes to add to this experience is potentially very fruitful to:  increase learner motivation; seed community practice; and  ADDITIONAL (something about learner identities)
+-->
 
 Play Testing - each lesson can help with short term motivation of having a game product ready  for others to play.  Showcase events help longer-term motivation towards and aid prioritisation as learners near the end of their project.
 
 The process of starting with a broken but playable template game allowed learners to be able to share their game with others from the start of the coding process.
 
 As a designer I identified this tactic as a way to address learner disengagement if game coding is taught from scratch via a step by step instructions from first principles, especially in younger ages.
-
-This process aligns with the Use Modify Create pedagogy.
 
 Similarly, in my journal notes, I reflect on the difficulty of interrupting the flow of making activities once they are underway. I thus began avoiding stopping making to share points to the whole class and avoid demonstrating key concepts on the screen.
 
@@ -587,6 +605,59 @@ Learning technology in community settings can engender feelings of agency and mo
 Time consideration of the process of being involved in an online community may remove time spent doing real life playtesting.
 
 Also - the diversity of creations available on a online commmunity  could remove the more communal experience of the designed limitations.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- There are examples of the authenticity of the audience being used by participants
+- Suzanna uses the imagined audience to norm behaviour.
+- Olivia (Th) imagines the impact of her game on real students as a motivational factor and one which drives design decisions. -->
+
+
+<!-- TENSION OF TIME ALLOCATION OF DRAMA PROCESS.
+The tensions associated with the use of time and efforts spent by participants engaging with the drama processes.
+The process of bringing people into the culture merit allocating time to address inequalities.
+
+Here, in response to potential alienation from the culture of coding, I have prioritised the introduction of tools and processes which participants can draw on to build agency.  -->
+
+<!-- NOTE - BRING THE DISCUSSION BACK TO THE RQS - -->
+<!--
+Exploring classroom culture, Engeström [-@engestrom1998reorganizing] notes the challenges of nurturing the motivation of students and tensions which surround the objectives of children of "schoolgoing". (complete this) -->
+
+<!-- NOTE - Find complexity here?  -->
+
+
+Research on project based learning using technology supports the motivational and inspirational factors of authentic tools in the fields of STEM computing [@garneli_computing_2015-1; @humble_use_nodate], media making and STEM in general. [IF SO FIND THIS ]
+
+<!-- The inspirational factor of _lifting the lid_ was reflected in a conversation among participants communicating a sense of awe of how much code must be involved in a professional game based on the relative complexity of the code of their simple game. -->
+
+
+In the activities of study, a high degree of authenticity made possible, in a material sense, by the digital nature of the learning resources. Beyond a general purpose computer, no prohibitive equipment is needed.
+
+However, in terms of complexity of tools use, careful shepherding is involved to screen participants from overly complex processes and tools.
+
+The use of code playgrounds mirrors that of professionals. The process of creating a microworld with embedded concepts brought to the fore for students to bump against,
+
+While early use of microworlds as a "acceptable" authentic-ish a concept endorsed in literature on authentic approaches [].
+
+
+
+
+
+
+
+
+
 
 
 ## Participant conflicts / contractions
@@ -808,7 +879,7 @@ In trying to organise and represent code examples to participants in a logical w
 
 I noted that some of these were aesthetic in nature for example; the graphical representation of game characters; adding sounds; and adding background images. Others are described in professional literature as game mechanics including: jumping on enemies; finding a door or flag to progress to the next level; and collect all food before progressing to next level. Others concerned other fundamental aspects concerning game space like the size and shape of game world and adding new levels the game.
 
-I experimented with different categories and themes to contains the emerging game elements. I also explored the concept of mapping the different challenges by difficulty on a map via structuring via concentric rings.
+I experimented with different categories and themes to contains the emerging game elements. I also explored the concept of mapping the different challenges by difficulty on a map via structuring via concentric rings. In contemporary journal notes I also explored the concept of _open-world_ approaches to structuring resources and helping learners navigate the learning experience based on choosing challenges based on their interests and appropriate difficulty levels.
 
 ![Scan of Journal Sketch of early attempt at dividing features by type and difficulty](./Pictures/pattern_types_sketch.png){width=85%}
 
@@ -834,8 +905,7 @@ In P5 I extended the scheme to included  _System and Challenge_ patterns. These 
 
 This section has explored  detail of different themes the game pattern collection.
 
-This structure chosen to present suppor materials to participants mirrors and potentially reinforces the framework used initially to analyse game elements. While the process of games analysis has limited research for novice game makers, it is not the the field of learning text coding. Similarly this outcome of theming the patterns by function and  and difficulty to help build community game making activity and knowledge aligns with the work by Holopainen and colleagues on the use of pattern collections to help structure game making for adults [@holopainen2007teaching].
-
+This structure chosen to present support materials to participants mirrors and potentially reinforces the framework used initially to analyse game elements. While the process of games analysis has limited research for novice game makers, it is not the the field of learning text coding. Similarly this outcome of theming the patterns by function and  and difficulty to help build community game making activity and knowledge aligns with the work by Holopainen and colleagues on the use of pattern collections to help structure game making for adults [@holopainen2007teaching].
 
 <!--
 My journal notes see an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers. In and early tentative attempt to define in broad strokes the types of game maker behaviour and underlying goals. In doing this I have taken inspiration from Bartle's game player types Hamari and Tuunanen, 2014). I translated player types to maker types based on notes in my observation journal and extracts from screen capture data. The following list of *Game Maker *types:
@@ -849,18 +919,14 @@ An additional rationale for this process was to help reduce potential internal b
 
 ### 3. Facilitator conflict addressing the Play Paradox
 
-In later chapters I explore the impact of attempts to resolve some of tensions explored above via recordings of data.
-
 This section addresses my interventions to resolve the play paradox between learner expression and choice and the curricular contents.
+CHECK IS THIS PREVIOUSLY EXPLORED?
 
-The end result of this conflict being (justified) inaction - which helped to provide the focus of this study.
+I adapted and extended resources to suit use in more formal learning environments, e.g. particularly a secondary computing classroom.
 
-In this phase, I adapted and extended resources to suit use in more formal learning environments, e.g. particularly a secondary computing classroom.
+This conflict provoked me to create resources which could serve to pull participants towards more curricular goals. However, for these learners I did not introduce the resources consistently. This inaction on my part has been is helpful to  provide a clearer the focus of this study on the possibilities of informal spaces.
 
-
-In learning environments where there is a lot of choice assessing learners via observation is beneficial. Rather than deciding what you want to teach and testing students on that area, you can map the learning happening in an authentic activity.
-
-
+SIGNPOSTING WHY THIS SECTION IS USEFUL HERE
 
 #### Using Physical Maps of Missions as Game Design Patterns - COMPRESS
 
@@ -893,6 +959,8 @@ The use of a physical map on which GDP were arranged aimed to communicate which 
 
 #### Learning Dimensions Map
 
+In learning environments where there is a lot of choice assessing learners via observation is beneficial. Rather than deciding what you want to teach and testing students on that area, you can map the learning happening in an authentic activity.
+
 When researching hands-on tinkering in Science museums Bevan and Petrich [-@petrich_it_2013] worked with educators to examine video footage of families interacting with exhibits to make a structured list of the learning they observed. The resulting map of learning dimensions included underlying science concepts but also contained more general skills and helping behaviours involved in exploratory learning processes.
 
 // REWRITE FOLLOWING
@@ -921,45 +989,17 @@ While this is an informal way of using maps the are other approaches that are mo
 _Map of Learning Dimensions of the 3M Game Making Approach_
  -->
 
- **Including Coding Concepts in the Learning Map and including Code Cards with links to online Concepts**
+ <!-- **Including Coding Concepts in the Learning Map and including Code Cards with links to online Concepts**
 
  Recap here the choice of coding concepts rather that CT in more abstract terms.
 
  - Make Code cards which contained links to game design patterns and the different component concepts
  - (see Eriksson and Bjork)
- - Draw on material and critique in chapter on semantic profiles / waves.
+ - Draw on material and critique in chapter on semantic profiles / waves. -->
 
+#### NOTES ON TENSIONS WHICH THIS LEARNING MAP HAS POTENTIAL TO ADDRESS
 
-**Limits to the learning dimensions map**
-
-This map was designed to link with particular conceptions of learning whilst still retaining a sense of the uniqueness of the affordances of this design. The settings are, CT in school curriculums, systems thinking, design approaches. These align broadly with a STEM approach. The rationale behind this is that Game Making commonly aligns with these curriculum areas and they are particularly suited to explore via iterative game making.
-NOTE - EXPLAIN WHERE THAT IS EXPLORED IN MORE DETAIL.
-
-However, there are a broad range of other skills and literacies also relevant with evidence emerging in video data.
-
-My own work in this area has been informed by work developing teaching materials for the Mozilla Foundation as part of the Teach the Web programme. This programme introduced a broad set of competencies name Web Literacies [@noauthor_learning/webliteracystandard/legacy/webliteracieswhitepaper_nodate] [@mozilla_foundation_webmaker_2014].
-
-- digital literacy - broad overview
-- web literacy - narrower
-- webmaker - and more specific affordances of key web based coding and exploring tools
-
-
-<!-- NOTE EXPAND IF USEFUL -->
-Note - while the use of these skills is not unique to game making and common to pick up on many making situations, the use of external image and sound asset creation tools which then creates production pipeline process does engender key navigation and importing and exporting skills which are very valuable in online environments.
-
-NOTE - The map could easily be changed to reflect this or other foci of teachers / researchers.
-
-
-
-<!-- A theme to follow up in the Maps / personal learning chapter is that of picking up on some of the behaviour of participants, especially that of experienced parents, experience either in coding practices of supporting their children. Once identified, how could beneficial interactions be encouraged in the next iteration of design.
-
-Examples include;
-
-- supporting reflection on design and coding concepts / skills.
-- navigation / organisational support - use of a physical map.
-
-For example, the use of CT concepts in a framework, listed as part of the initial design pattern card, which could then be discussed, ticked off or otherwise reflected on. -->
-
+THIS SECTIONS NEEDS DEVELOPMENT
 
 **Teacher stress if they are not able to support a very diverse set of features demanded by students working on diverse kinds of games.**-  
 Limit the type of game to one kind. Offer a significant but limited menu of missions that users can add. Offer written and visual support documents which learners can access independently of facilitators
@@ -970,7 +1010,7 @@ A map of learning dimensions flexibly linked to main missions/patterns can be us
 
 **tension adapting resources to a curriculum environment**
 There were some additional changes in the way that design patterns were presented to learners mirroring design patterns on other domains including: name; need ; related patterns. In addition related concepts in computational thinking and design processes which are promoted as part of the recent computing curriculum were included and linked to a learning dimensions map.
- <!-- .  WHERE TO PUT EXAMPLE? of design pattern current -->
+<!-- .  WHERE TO PUT EXAMPLE? of design pattern current -->
 
 In addition, material which mapped and explained learning dimensions including design skills and computational concepts were included in the participant support resources.
 
@@ -990,110 +1030,53 @@ Systems related missions were designed. (If so not clearly tested) Challenge sec
 
 Extra missions which highlight game challenge and user experience may help learners to explore systems concepts within the game context
 
-<!-- ### Stages of Design
-
-#### Evolution of Template and supporting resources
-I'm not sure if this even goes into this chapter - it certainly starts to answer some of the research questions.
-Go into more detail than previously on the choice and use of tools.
-Use the 3M framework as a guide for MakeCode
-Revisit FM book as a guide for Glitch/ Phaser
-
-
-### Issues Emerging from Evolution of Design
-More detailed analysis - thoughts on validity of data -->
 
 
 
+<!-- NOTE EXPAND IF USEFUL -->
 
-## Discussion
+<!-- While the use of these skills is not unique to game making and common to pick up on many making situations, the use of external image and sound asset creation tools which then creates production pipeline process does engender key navigation and importing and exporting skills which are very valuable in online environments. -->
+
+<!-- NOTE - The map could easily be changed to reflect this or other foci of teachers / researchers. -->
+<!-- A theme to follow up in the Maps / personal learning chapter is that of picking up on some of the behaviour of participants, especially that of experienced parents, experience either in coding practices of supporting their children. Once identified, how could beneficial interactions be encouraged in the next iteration of design.
+
+Examples include;
+
+- supporting reflection on design and coding concepts / skills.
+- navigation / organisational support - use of a physical map.
+
+For example, the use of CT concepts in a framework, listed as part of the initial design pattern card, which could then be discussed, ticked off or otherwise reflected on. -->
+
+
+
+## Conclusion
+
+### Limits to the learning dimensions map in an informal setting
+
+This map was designed to link with particular conceptions of learning whilst still retaining a sense of the uniqueness of the affordances of this design. The settings are, CT in school curriculums, systems thinking, design approaches. These align broadly with a STEM approach. The rationale behind this is that Game Making commonly aligns with these curriculum areas and they are particularly suited to explore via iterative game making.
+
+The process of developing the learning dimensions map was helpful for me as a researcher in that it helped decided to keep the focus on this study on more informal and organically evolving processes. This emerging perspective also developed as I read underlying ontological approaches to the socio cultural understandings of learning which problematise the separate of the content to be learned
+
+While I attempted to resolve this by adopting Bevan and al's observational approach, the process of making this more relevant and recognisable for UK teachers arguably drew me off course. This theme is explored in detail in the next two chapters.
 
 ### Starting discussion on the mutual nature of the design process.
 
 With guidance, PGCE students created printable resources that highlighted particular key lines of code and variables that had a high impact on the game experiences. These include changing gravity, altering the player speed, background colour of the game and the game layout of the platforms, hazards and food to collect. This approach was more prescriptive than I would have adopted, however it worked well. I then made a connection to UMC literature.
 
 
-### Work of Gee and others on identity of makers / coders
-
-Link with game making - identities above?
-
-The process of creating assets builds in Molly the identity of a proficient maker. She wants to build on her achievement of being an "expert pixel". As explored in literature review the possibility to change and to play with identity is important in the work of Gee.
-FIND RELEVANT LINKS HERE - CALL BACK TO LIT REVIEW
-
-His work explores the role of the design of games and the surrounding communities that build up around games to support an nurture the development of player identities. The process is shown to have beneficial effects in supporting the creative interations with games and play.
-
-In a similar vein, drama processes like the mantle of the expert are designed and enacted by facilitators in ways which allow participants to draw on their existing knowledge and encourages them to put this into practice in fictional scenarios.
-
-The next chapter outlines the delivery and start to explore the impact of
-- the process drama used
-- authentic tools
-- emerging processes
 
 
-### Discussion on Authenticity from methods chapter moved here
-
-#### Near-authentic processes and tools in drama and project-based processes and related scenarios to increase agency
-
-**Key message: authentic tools and processes can increase agency but facilitators should use them with careful curation - as there are negative effects too**
-
-<!-- - audience
-- tools
-- processes (professional and peers ?)
-- shared concepts - link to GDPs as a big one -->
-
-Rainer, Bolton and other practitioner-researchers agree on the potential and value of exploring other subject matter and undertaking authentic project work within a drama frame [-@rainer_drama_2012]. Examples include, literacy, maths, science and history.
-
-PBL is adapted to schools in many settings thus, authenticity is "on a scale" in PBL [find support].
-
-The concept of an authentic-as-possible project is a key tool for educators to support game making via project based learning  [].
-
-This authenticity has several relevant dimensions in this study including: audience; toolset; and supportive processes / documentation. This section explores the these dimensions of authenticity and the resulting relationships with agency of the learners.
-
-
-#### Authenticity of Audience and Problems
-
-Making for peers has value but can be amplified and scoped using a fictional or controlled external audience often via scenarios.
-
-In line existing PBL research [LIT NEEDED]  with previous iterations of this learning design the process of creating a game for a real audience of university students was motivating [DATA NEEDED].
-
-While the use of a fictional audience in the drama is clearly inauthentic, authenticity is "on a scale" [find support].
-
-In relation to existing literature this is well explored but the use of drama processes to add to this experience is potentially very fruitful to:  increase learner motivation; seed community practice; and  ADDITIONAL (something about learner identities)
-
-
-There are examples of the authenticity of the audience being used by participants
-- Suzanna uses the imagined audience to norm behaviour.
-- Olivia (Th) imagines the impact of her game on real students as a motivational factor and one which drives design decisions.
-
-
-<!-- TENSION OF TIME ALLOCATION OF DRAMA PROCESS.
-The tensions associated with the use of time and efforts spent by participants engaging with the drama processes.
-The process of bringing people into the culture merit allocating time to address inequalities.
-
-Here, in response to potential alienation from the culture of coding, I have prioritised the introduction of tools and processes which participants can draw on to build agency.  -->
-
-<!-- NOTE - BRING THE DISCUSSION BACK TO THE RQS - -->
-<!--
-Exploring classroom culture, Engeström [-@engestrom1998reorganizing] notes the challenges of nurturing the motivation of students and tensions which surround the objectives of children of "schoolgoing". (complete this) -->
-
-<!-- NOTE - Find complexity here?  -->
-
-
-Research on project based learning using technology supports the motivational and inspirational factors of authentic tools in the fields of STEM computing [@garneli_computing_2015-1; @humble_use_nodate], media making and STEM in general. [IF SO FIND THIS ]
-
-<!-- The inspirational factor of _lifting the lid_ was reflected in a conversation among participants communicating a sense of awe of how much code must be involved in a professional game based on the relative complexity of the code of their simple game. -->
-
-
-In the activities of study, a high degree of authenticity made possible, in a material sense, by the digital nature of the learning resources. Beyond a general purpose computer, no prohibitive equipment is needed.
-
-However, in terms of complexity of tools use, careful shepherding is involved to screen participants from overly complex processes and tools.
-
-The use of code playgrounds mirrors that of professionals. The process of creating a microworld with embedded concepts brought to the fore for students to bump against,
-
-While early use of microworlds as a "acceptable" authentic-ish a concept endorsed in literature on authentic approaches [].
+<!-- The process of creating assets builds in Molly the identity of a proficient maker. She wants to build on her achievement of being an "expert pixel".  -->
 
 
 
+### Link to next chapter
 
+This chapter has dealt with the evolution of design in initial phases and responses to learner experience to resolve tensions.
+
+As explored in literature review the possibility to change and to play with identity is important in the work of Gee and ITO, who explore the role of the design of games and the surrounding communities that build up around games to support an nurture the development of player identities. The process is shown to have beneficial effects in supporting the creative process. In a similar vein, drama processes like the mantle of the expert are designed and enacted by facilitators in ways which allow participants to draw on their existing knowledge and encourages them to put this into practice in fictional scenarios.
+
+The next chapter  focus on the learner response to challenges of game making in the recorded sessions. It explores the delivery and start to explore the impact of the process drama used and the use of authentic tools and emerging community processes.
 
 
 <!-- NOT SURE WHAT TO DO WITH THIS IN THIS CHAPTER
@@ -1174,11 +1157,6 @@ https://docs.google.com/spreadsheets/d/1EvMehUNHIGj0xRyrKgBxj5GwOGHwnTFw9EMBJ3Ot
 
 
 
-## Link to next chapter
-
-This chapter has dealt with the evolution of design in initial phases and responses to learner experience to resolve tensions.
-
-Three following chapters with a greater focus on the learner response to challenges of game making in the recorded sessions.
 
 <!-- Due to the complexity and many moving parts of the design it has been mostly descriptive. -->
 
