--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -54,12 +54,14 @@ title: 4. Emerging Learning Designs
         -   [Using Physical Maps of Missions as Game Design Patterns -
             COMPRESS](#using-physical-maps-of-missions-as-game-design-patterns---compress)
         -   [Learning Dimensions Map](#learning-dimensions-map)
--   [Discussion](#discussion)
+        -   [NOTES ON TENSIONS WHICH THIS LEARNING MAP HAS POTENTIAL TO
+            ADDRESS](#notes-on-tensions-which-this-learning-map-has-potential-to-address)
+-   [Conclusion](#conclusion)
+    -   [Limits to the learning dimensions map in an informal
+        setting](#limits-to-the-learning-dimensions-map-in-an-informal-setting)
     -   [Starting discussion on the mutual nature of the design
         process.](#starting-discussion-on-the-mutual-nature-of-the-design-process.)
-    -   [Work of Gee and others on identity of makers /
-        coders](#work-of-gee-and-others-on-identity-of-makers-coders)
--   [Link to next chapter](#link-to-next-chapter)
+    -   [Link to next chapter](#link-to-next-chapter)
 
 ## Research Questions - June 2023
 
