--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -116,6 +116,20 @@ _Table of initial data_
 
 https://docs.google.com/document/d/1aEF0EsZRe-Ovok2VP7ouYH_v-SdepnNnXFhLtj6SseU/edit
 
+<!--
+
+ Convert here.
+https://tabletomarkdown.com/convert-spreadsheet-to-markdown/
+
+-->
+
+|Issue                    | Instances |
+| --------------------------------------------------------------------------------------------------------------- | -------------- |
+| Barrier: Isolation during problems solving increases frustration and inhibits learning                                                      | 3         |
+| Tension: the goal for students to be self-directed vs. the advantages of providing a shared collaborative foundation for production         | 4         |
+| Tactic: Non-coding activities amd games to increase group connections as a good preparation for coding related challenges and frustrations. | 5         |
+| Barrier: students not considering them selves as STEM / coding types of people                                                              |           |
+| Barrier: logistical issues of time and equipment in school settings                                                                         |           |
 
 
 
@@ -622,16 +636,6 @@ Also - the diversity of creations available on a online commmunity  could remove
 
 
 
-
-
-
-
-
-
-
-
-
-
 <!-- There are examples of the authenticity of the audience being used by participants
 - Suzanna uses the imagined audience to norm behaviour.
 - Olivia (Th) imagines the impact of her game on real students as a motivational factor and one which drives design decisions. -->
@@ -662,15 +666,6 @@ However, in terms of complexity of tools use, careful shepherding is involved to
 The use of code playgrounds mirrors that of professionals. The process of creating a microworld with embedded concepts brought to the fore for students to bump against,
 
 While early use of microworlds as a "acceptable" authentic-ish a concept endorsed in literature on authentic approaches [].
-
-
-
-
-
-
-
-
-
 
 
 ## Participant conflicts / contractions
@@ -1076,11 +1071,14 @@ While I attempted to resolve this by adopting Bevan and al's observational appro
 
 With guidance, PGCE students created printable resources that highlighted particular key lines of code and variables that had a high impact on the game experiences. These include changing gravity, altering the player speed, background colour of the game and the game layout of the platforms, hazards and food to collect. This approach was more prescriptive than I would have adopted, however it worked well. I then made a connection to UMC literature.
 
+NOTE - INSERT RESPONSE FROM COMMENTS FROM CATHY.
 
+As explored in x, the process of this chapter is in line with perspectives approaching research with an open remit to see what tensions come into focus in a particular setting. This allows a subsequent  refocusing of research to explore these emerging issues in more depth.
 
+<!-- Cathy raised an issue of why if tensions are already explored elsewhere in the literature is it relevant to surface them here.
+After a discussion, a resolution to this issue in the thesis is to describe the value of approaching research with an open remit to see what tensions come into focus in a particular setting. Then to refocus research to explore these emerging issues in more depth.  -->
 
 <!-- The process of creating assets builds in Molly the identity of a proficient maker. She wants to build on her achievement of being an "expert pixel".  -->
-
 
 
 ### Link to next chapter
