--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -137,6 +137,12 @@ https://tabletomarkdown.com/convert-spreadsheet-to-markdown/
 
 The themes that emerged above.
 
+One key issue is the clash of cultures.
+
+
+    There's this idea of a clash of cultures where to learn like the dominant school culture, you have to release some of your self-identity or you need to learn to bridge these worlds. And I think at least in the writing, the literature, that there's this resistance of seeing yourself as someone who does  STEM, as someone who does computer science. It's like we're not people that do that. And I think by doing it with their family, like there's no better way to kind of mitigate that effect and that hesitation, that barrier, because they're all becoming your whole family, like your, your closest identity is becoming people that write code or people that make robots.
+
+
 
 <!-- The design description is framed within DBR language and concepts. -->
 <!-- Section describing  Game Design Patterns as  the main unit of Activity. See Blunden to frame this and to describe the utility of the idea  [@blundenInterdisciplinaryConceptActivity2009; @blundenGermCellUnit2014]. -->
